# c-integrate-cpp

./: .gitignore  CMakeLists.txt  README.md  main.c
sub_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
sub_lib/include/: MyClass.h  MyWrapper.h
sub_lib/src/: MyClass.cc  MyWrapper.cc
